--- a/realtor/.gitignore
+++ b/realtor/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 local_settings.py
 db.sqlite3
 media
+bin
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -78,8 +79,6 @@ docs/_build/
 
 # PyBuilder
 target/
-
-#TEst
 
 # Jupyter Notebook
 .ipynb_checkpoints
