--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 *.pyc
 __pycache__/
 local_settings.py
-media
+/media
 bin
 include
+/static
 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
